fixed overlapping title height and added employment section

--- a/_sass/_biscuit.scss
+++ b/_sass/_biscuit.scss
@@ -56,6 +56,17 @@ h1 a {
   color: inherit;
 }
 
+@media(max-width: 440px) {
+  body {
+    margin-top: 1rem;
+  }
+
+  h1 {
+    line-height: 4rem;
+    margin-top: 0;
+  }
+}
+
 h2 {
   margin-top: 6rem;
   font-size: 1.7rem;
